[gd_scene load_steps=49 format=2]

[ext_resource path="res://Scripts/Level/LevelContainer.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/WORLD 1 in 150BPM.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/WORLD 2 in 150bpm.wav" type="AudioStream" id=3]
[ext_resource path="res://Prefabs/Character/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/Character/CharacterSwitcher.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Characters/red_walk_left.png" type="Texture" id=6]
[ext_resource path="res://Assets/Characters/red_walk_right.png" type="Texture" id=7]
[ext_resource path="res://Assets/Characters/blue_walk_right.png" type="Texture" id=8]
[ext_resource path="res://Assets/Characters/blue_walk_up_down.png" type="Texture" id=9]
[ext_resource path="res://Assets/Characters/blue_walk_left.png" type="Texture" id=10]
[ext_resource path="res://Assets/Characters/red_walk_up_down.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Character/AnimationControler.gd" type="Script" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CharacterSwitcher" parent="." instance=ExtResource( 5 )]
Character_1 = NodePath("Character1")
Character_2 = NodePath("Character2")

[node name="Character1" parent="CharacterSwitcher" groups=[
"Characters",
] instance=ExtResource( 4 )]
character_music = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CharacterSwitcher/Character1"]
frames = SubResource( 18 )
playing = true
script = ExtResource( 12 )

[node name="Character2" parent="CharacterSwitcher" groups=[
"Characters",
] instance=ExtResource( 4 )]
character_music = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CharacterSwitcher/Character2"]
frames = SubResource( 36 )
playing = true
script = ExtResource( 12 )

[connection signal="state_change" from="CharacterSwitcher/Character1" to="CharacterSwitcher/Character1/AnimatedSprite" method="_on_Character_state_change"]
[connection signal="state_change" from="CharacterSwitcher/Character2" to="CharacterSwitcher/Character2/AnimatedSprite" method="_on_Character_state_change"]
